# orbitprofiler

./: .gitignore  .gitmodules  CMakeLists.txt  Orbit.pro  Orbit.sln
OrbitAsm/: CMakeLists.txt  OrbitAsm.vcxproj
OrbitBase/: BaseTypes.h  CMakeLists.txt  Callstack.h  CallstackPOD.cpp  Context.h  CrashHandler.cpp  FunctionArgs.h  FunctionStats.h  Log.cpp  Log.h  Makefile  Message.h  OrbitAsio.cpp  OrbitAsio.h  OrbitBase.pro  OrbitBase.pro.autosave  OrbitBase.vcxproj  OrbitTypes.h  Path.cpp  Path.h  PrintVar.h  Profiling.h  ScopeTimer.cpp  ScopeTimer.h  TcpEntity.cpp  TcpEntity.h  TcpForward.h  Threading.h  TimerManager.cpp  TimerManager.h  TypeInfoStructs.h  Utils.cpp  Utils.h
OrbitCore/: BaseTypes.h  BlockChain.h  CMakeLists.txt  Callstack.cpp  Capture.cpp  Capture.h  Context.h  ContextSwitch.h  Core.h  CoreCommon.props  CrashHandler.cpp  DiaManager.cpp  DiaParser.cpp  DiaParser.h  Diff.cpp  Diff.h  EventBuffer.cpp  EventBuffer.h  EventCallbacks.cpp  EventCallbacks.h  EventClasses.h  EventGuid.h  EventTracer.cpp  EventTracer.h  EventUtils.cpp  EventUtils.h  FunctionStats.cpp  Hijacking.cpp  Injection.cpp  Injection.h  Log.h  LogInterface.cpp  Makefile  MemoryTracker.cpp  MemoryTracker.h  MiniDump.cpp  ModuleManager.cpp  ModuleManager.h  OrbitCore.pro  OrbitCore.vcxproj  (+46 more)
OrbitDll/: CMakeLists.txt  ClientTimerManager.h  DllCommon.props  Hijacking.cpp  Hijacking.h  OrbitDll.cpp  OrbitDll.vcxproj  OrbitDll.vcxproj.filters  OrbitLib.cpp  TcpClient.cpp
OrbitGl/: App.cpp  App.h  Batcher.cpp  BlackBoard.cpp  CMakeLists.txt  CallStackDataView.cpp  CaptureSerializer.cpp  CaptureWindow.cpp  Card.cpp  Card.h  CoreMath.h  DataViewModel.cpp  Debugger.cpp  Debugger.h  Disassembler.cpp  Disassembler.h  EventTrack.cpp  FunctionDataView.cpp  GlCanvas.cpp  GlCanvas.h  GlCommon.props  GlPanel.cpp  GlSlider.cpp  GlUtils.cpp  GlUtils.h  GlobalDataView.cpp  HomeWindow.cpp  ImGuiOrbit.cpp  ImGuiOrbit.h  ImmediateWindow.cpp  LiveFunctionDataView.cpp  LogDataView.cpp  LogDataView.h  Makefile  ModuleDataView.cpp  OpenGl.h  OrbitGl.pro  OrbitGl.vcxproj  PickingManager.cpp  PluginCanvas.cpp  (+17 more)
OrbitPlugin/: CMakeLists.txt  OrbitData.h  OrbitPlugin.vcxproj  OrbitPlugin.vcxproj.filters  OrbitSDK.h  OrbitUserData.h  UserPlugin.cpp
OrbitQt/: CMakeLists.txt  OrbitQt.pro  OrbitQt.vcxproj  OrbitQt.vcxproj.filters  QtCommon.props  licensedialog.cpp  main.cpp  orbitcodeeditor.cpp  orbitcodeeditor.h  orbitdataviewpanel.cpp  orbitdiffdialog.cpp  orbitdisassemblydialog.cpp  orbitglwidget.cpp  orbitmainwindow.cpp  orbitmainwindow.ui  orbitsamplingreport.cpp  orbittablemodel.cpp  orbittreeitem.cpp  orbittreemodel.cpp  orbittreeview.cpp  orbitwatchwidget.cpp  outputdialog.cpp  processlauncherwidget.cpp  qrc_qtpropertybrowser.cpp  showincludesdialog.cpp
PropSheets/: BreakpadCommon.props  BreakpadWin32Debug.props  BreakpadWin32Release.props  BreakpadWin64Debug.props  BreakpadWin64Release.props  CapstoneCommon.props  CapstoneWin32Debug.props  CapstoneWin32Release.props  CapstoneWin64Debug.props  CapstoneWin64Release.props  CurlDebug.props  CurlRelease.props  DebugCommon.props  GlCommon.props  GlDebug.props  GlRelease.props  Global.props  MinhookCommon.props  MinhookWin32Debug.props  MinhookWin32Release.props  MinhookWin64Debug.props  MinhookWin64Release.props  Qt.props  QtDebug.props  QtRelease.props  ReleaseCommon.props
UnitTest2/: TestCommon.props  UnitTest2.cpp  UnitTest2.vcxproj  UnitTest2.vcxproj.filters
build-OrbitBaseQt-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile
build-OrbitBaseQt-Desktop_Qt_5_7_0_GCC_64bit-Release/: Makefile
build-OrbitCoreQt-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile
build-OrbitQt-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile
