add_library(OrbitCore STATIC

    ../external/DIA2Dump/dia2dump.cpp
    ../external/DIA2Dump/PrintSymbol.cpp
    ../external/DIA2Dump/regs.cpp
    ../external/multicore/common/inmemorylogger.cpp
    ../external/peparse/buffer.cpp
    ../external/peparse/dump.cpp
    ../external/peparse/parse.cpp

    Callstack.cpp
    Capture.cpp
    ContextSwitch.cpp
    CoreApp.cpp
    DiaManager.cpp
    DiaParser.cpp
    Diff.cpp
    EventBuffer.cpp
    EventCallbacks.cpp
    EventTracer.cpp
    EventUtils.cpp
    FunctionStats.cpp
    Injection.cpp
    LogInterface.cpp
    MemoryTracker.cpp
    MiniDump.cpp
    ModuleManager.cpp
    OrbitDia.cpp
    OrbitFunction.cpp
    OrbitModule.cpp
    OrbitProcess.cpp
    OrbitRule.cpp
    OrbitSession.cpp
    OrbitThread.cpp
    OrbitType.cpp
    OrbitUnreal.cpp
    Params.cpp
    Pdb.cpp
    ProcessUtils.cpp
    SamplingProfiler.cpp
    Serialization.cpp
    SymbolUtils.cpp
    Tcp.cpp
    TcpServer.cpp
    #TypeInfo.cpp
    Variable.cpp
    VariableTracing.cpp
    Version.cpp
)

target_include_directories(OrbitCore
PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
PRIVATE
    ${EXTERN_ROOT}/breakpad/src
)

target_link_libraries(OrbitCore
    OrbitBase
	dbghelp.lib
	debug
		${BREAKPAD_LIBS_DEBUG}
	optimized
		${BREAKPAD_LIBS_RELEASE}
)
